fix popup layout bug

--- a/UI/src/app/shared/popup/popup.styles.scss
+++ b/UI/src/app/shared/popup/popup.styles.scss
@@ -5,8 +5,8 @@
     padding: 28px 20px 20px;
     width: 100%;
     max-width: 260px;
-    height: 100%;
     position: absolute;
+    z-index: 1;
     background-color: #FFFFFF;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
     right: -6px;
